@@ -1,7 +1,7 @@
-# Fichero de configuracion base de agentes de Pandora
-# Base config file for Pandora agents
-# Version 1.2 Beta 2
-# Licenced under GPL licence, 2003-2005 Sancho Lerena
+# Fichero de configuracion base de agentes de Pandora FMS
+# Base config file for Pandora FMS agents
+# Version 1.2
+# Licensed under GPL license, 2003-2006 Sancho Lerena
 
 # General Parameters
 # ==================
@@ -23,7 +23,7 @@ module_begin
 module_name cpu_user
 module_type generic_data
 module_interval 1
-module_exec vmstat 1 2 | tail -1 | awk '{ print $14 }'
+module_exec vmstat 1 2 | tail -1 | awk '{ print $13 }'
 module_max 100
 module_min 0
 module_descripcion User CPU Usage (%)
@@ -32,7 +32,7 @@ module_end
 module_begin 
 module_name cpu_sys
 module_type generic_data
-module_exec vmstat 1 2 | tail -1 | awk '{ print $15 }'
+module_exec vmstat 1 2 | tail -1 | awk '{ print $14 }'
 module_max 100
 module_min 0
 module_description System CPU Usage (%)
