@@ -16,8 +16,9 @@
 server_ip 127.0.0.1
 server_path /opt/pandora_server/data_in
 temporal "C:\temp"
-interval 1
+interval 10
 agent_name localhost
+pandora_debug 1
 
 # Module Definition
 # =================
@@ -54,6 +55,22 @@ module_name Proc_lsass
 module_type generic_proc
 module_proc lsass.exe
 module_description LSASS Process
+module_end
+
+# Is lsass.exe process alive ?
+module_begin
+module_name Proc_winlogon
+module_type generic_proc
+module_proc winlogon.exe
+module_description Winlogon
+module_end
+
+# Is lsass.exe process alive ?
+module_begin
+module_name Proc_cmd
+module_type generic_proc
+module_proc cmd.exe
+module_description cmd
 module_end
 
 # Received packets
